WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210157
REGRESSION(
r257758
): Launch time performance regression
https://bugs.webkit.org/show_bug.cgi?id=210157
Summary
REGRESSION(r257758): Launch time performance regression
Brent Fulgham
Reported
2020-04-07 14:56:12 PDT
The initialization added in
r257758
introduced a launch performance regression.
Attachments
Patch
(1.91 KB, patch)
2020-04-07 15:48 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Patch
(2.06 KB, patch)
2020-04-08 11:07 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2020-04-07 14:56:25 PDT
<
rdar://problem/61119881
>
Brent Fulgham
Comment 2
2020-04-07 15:48:03 PDT
Created
attachment 395755
[details]
Patch
Brent Fulgham
Comment 3
2020-04-08 11:07:45 PDT
Created
attachment 395839
[details]
Patch
Alex Christensen
Comment 4
2020-04-08 13:29:49 PDT
Comment on
attachment 395839
[details]
Patch r=me, make sure to not land this before the internal part.
EWS
Comment 5
2020-04-08 17:41:23 PDT
Committed
r259771
: <
https://trac.webkit.org/changeset/259771
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395839
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug