REGRESSION(r257758): Launch time performance regression https://bugs.webkit.org/show_bug.cgi?id=210157 <rdar://problem/61119881>

Reviewed by Alex Christensen.

Address a launch time performance regression in the WebProcessPool constructor
by starting a potentially slow server call in the constructor, and only waiting
for its result if it has not been received when the value is needed.

* UIProcess/WebProcessPool.cpp:
(WebProcessPool::WebProcessPool): Start initialization function in constructor,
rather than blocking for the


Canonical link: https://commits.webkit.org/223131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259771 268f45cc-cd09-0410-ab3c-d52691b4dbfc